# wave-browser

./: Cargo.toml  README.md
.github/agents/: Companion.agent.md  Debugger.agent.md
.planning/: architecture.md  product-spec.md  roadmap.md
common/: Cargo.toml
common/src/: lib.rs  theme.rs
core/: BUILD_INSTRUCTIONS.md  Cargo.toml
core/src/: lib.rs  shield.rs  spaces.rs
extensions/: Cargo.toml
extensions/src/: lib.rs
